# pyscarcopula

./: .gitignore  404.html  ARCHITECTURE.md  LICENSE.txt  MANIFEST.in  README.md  animation.py  conftest.py  example.ipynb  example1.ipynb  example2.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyscarcopula_backup.7z  run_risk_metrics.py  setup.py  sitemap.xml  test.csv  test.ipynb
animations/: animation.py
archive/: Untitled-working.ipynb  example2.ipynb  example3.ipynb
d_risk_data/: pd_cvar_mle_h_0.95_10000000.csv  pd_cvar_mle_n_0.95_100000.csv  pd_cvar_scar-m-ou_h_0.95_10000000.csv  pd_cvar_scar-m-ou_n_0.95_100000.csv  pd_cvar_scar-m-ou_n_0.95_10000000.csv  pd_cvar_scar-p-ld_n_0.95_10000000.csv  pd_cvar_scar-p-ou_h_0.95_10000000.csv  pd_cvar_scar-p-ou_n_0.95_10000000.csv  pd_var_mle_h_0.95_1000.csv  pd_var_mle_h_0.95_10000000.csv  pd_var_mle_n_0.95_1000.csv  pd_var_mle_n_0.95_10000000.csv  pd_var_scar-m-ou_h_0.95_10000000.csv  pd_var_scar-p-ou_n_0.95_10000000.csv
data/: DowJones_NASDAQ.csv  crypto_prices.csv  crypto_prices30m.csv  dj.csv  moex_top.csv  sp500_yfinance_2020_prices.csv  test_returns_data_for_eis.csv  us_equity_prices.csv
docs/: index.md  rvine-conditional-notes.md
examples/: 01_basic_api.ipynb  02_bivariate.ipynb  03_multivariate.ipynb  03_vine.ipynb  04_risk_metrics.ipynb  04_vine.ipynb  05_pyvinecopulib_comparison.ipynb  05_risk_metrics.ipynb  06_pyvinecopulib_comparison.ipynb
logs/: Clayton_MLE_200_2024-06-03_102946.csv  Clayton_MLE_200_2024-06-03_111401.csv  Clayton_SCAR-M-OU_500_2024-06-03_165953.csv  Clayton_SCAR-P-LD_10000_2024-06-03_214350.csv  Clayton_SCAR-P-OU_10000_2024-06-03_185901.csv  Frank_SCAR-M-OU_500_2024-05-26_205750.csv  Gumbel_MLE_200_2024-06-04_073419.csv  Gumbel_MLE_500_2024-05-12_131108.csv  (+21 more)
(+454 files in other folders)
